4 commit - with the problems running the code, after trial and error one of the solutions was to separate the code into three Java files, because classes were not identifying with each other when placed in the same file